--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor = "#1f77b4"
-backgroundColor = "#f7f9fc"
-secondaryBackgroundColor = "#e9eef5"
-textColor = "#111828"
+primaryColor = "#BB86FC"
+backgroundColor = "#121212"
+secondaryBackgroundColor = "#1E1E1E"
+textColor = "#E0E0E0"
 font = "sans serif"
